Updated social buttons

--- a/index.html
+++ b/index.html
@@ -55,19 +55,7 @@
         </div>
         <div id="mainContent" class="mainContent">
             <div class="share">
-                <ul>
-                    <li class="share-facebook">
-                        <div class="like_button"><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.chteuchteu.com%2Fmunin-for-android%2F&amp;layout=button_count&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;height=21&amp;locale=fr_FR&amp;width=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:96px; height:21px;" allowtransparency="true"></iframe></div>
-                    </li>
-                    <li class="share-twitter">
-                        <div class="twitter_button"><iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.html?url=http%3A%2F%2Fwww.chteuchteu.com%2Fmunin-for-android%2F&amp;counturl=http%3A%2F%2Fwww.chteuchteu.com%2Fmunin-for-android%2F&amp;count=horizontal&amp;text=Munin%20for%20Android%3A" style="width:101px; height:20px;"></iframe></div>
-                    </li>
-                    <li class="share-google-plus-1">
-                        <div class="googleplus1_button">
-                            <div style="text-indent: 0px; margin: 0px; padding: 0px; background-color: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; width: 90px; height: 20px; background-position: initial initial; background-repeat: initial initial;" id="___plusone_0"><iframe frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no" style="position: static; top: 0px; width: 90px; margin: 0px; border-style: none; left: 0px; visibility: visible; height: 20px;" tabindex="0" vspace="0" width="100%" id="I0_1370695175103" name="I0_1370695175103" src="https://apis.google.com/_/+1/fastbutton?bsv&amp;size=medium&amp;hl=en-US&amp;origin=http%3A%2F%2Fwww.chteuchteu.com&amp;url=http%3A%2F%2Fwww.chteuchteu.com%2Fmunin-for-android%2F&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.fr.VTT8yImZKgQ.O%2Fm%3D__features__%2Fam%3DEQ%2Frt%3Dj%2Fd%3D1%2Frs%3DAItRSTPZ5QwIrwtW7NyMPZEiXsK1tbWJWg#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Conload&amp;id=I0_1370695175103&amp;parent=http%3A%2F%2Fwww.chteuchteu.com&amp;rpctoken=20048925" allowtransparency="true" data-gapiattached="true" title="+1"></iframe></div>
-                        </div>
-                    </li>
-                </ul>
+                <div class="addthis_native_toolbox"></div>
             </div>
             <div class="container-fluid">
                 <h2>What is Munin for Android?</h2>
@@ -327,5 +315,7 @@
 	  ga('create', 'UA-55687235-1', 'auto');
 	  ga('send', 'pageview');
 	</script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-543b9bcb351959fb" async></script>
+
 </body>
 </html>
