This document was successfully checked as HTML5!

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Munin for Android</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -29,8 +30,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="img/logo-hdpi.png" class="logo" /> <h1>Munin for Android</h1>
-            <img src="img/screenshot1.png" class="header-right" />
+            <img src="img/logo-hdpi.png" class="logo" alt="Munin for Android" /> <h1>Munin for Android</h1>
+            <img src="img/screenshot1.png" class="header-right" alt="Screenshot" />
             <div class="slogan">Keep an eye on your servers,<br />whenever, wherever!</div>
             <div class="header-features">
                 <ul>
@@ -49,8 +50,10 @@
         </div>
         <div id="gplay_container" class="gplay_container">
             <div id="gplay" class="gplay">
-                <a href="https://play.google.com/store/apps/details?id=com.chteuchteu.munin" class="gplay_link"><img src="img/logo-mdpi.png" />Munin for Android<br />FREE</a>
-                <a href="https://play.google.com/store/apps/details?id=com.chteuchteu.muninforandroidfeaturespack" class="gplay_link"><img src="img/logo-fp-hdpi.png" />MfA Features Pack<br />$1.5</a>
+                <a href="https://play.google.com/store/apps/details?id=com.chteuchteu.munin" class="gplay_link">
+                    <img src="img/logo-mdpi.png" alt="Download Munin for Android on Google Play" />Munin for Android<br />FREE</a>
+                <a href="https://play.google.com/store/apps/details?id=com.chteuchteu.muninforandroidfeaturespack" class="gplay_link">
+                    <img src="img/logo-fp-hdpi.png" alt="Download Munin for Android Features Pack on Google Play" />MfA Features Pack<br />$1.5</a>
             </div>
         </div>
         <div id="mainContent" class="mainContent">
@@ -86,7 +89,7 @@
 
                 <h2>Features</h2>
                 <p>Munin for Android has a lot of great features! If you wish to add one, don't hesitate to <a href="mailto:support@munin-for-android.com">ask</a>!</p>
-                <table class="features card" cellspacing="0">
+                <table class="features card">
                     <tr class="ft_head">
                         <td class="ft_h"></td>
                         <td class="ft_h">Munin for Android</td>
@@ -94,50 +97,50 @@
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b"><b>HTTP Basic Auth</b> support</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line ft_i">
                         <td class="ft_b"><b>Multi-server</b> support</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b"><b>Port</b> selection <span style="font-size:9px;">(ex: 88.180.108.192<u>:85</u>)</span></td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line ft_i">
                         <td class="ft_b"><b>Multi-touch</b> on-graph zoom</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b"><b>2</b> sample servers to try the app</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line ft_i">
                         <td class="ft_b">4 <b>languages</b>*</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b">Save graphs on the SD card</td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line ft_i">
                         <td class="ft_b"><b>Labels</b></td>
-                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td colspan="2" class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b"><b>HTTP Digest Auth</b> support</td>
-                        <td class="ft_c"><img src="img/navigation_cancel.png" /></td>
-                        <td class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td class="ft_c"><img src="img/navigation_cancel.png" alt="Not included" /></td>
+                        <td class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line ft_i">
                         <td class="ft_b"><b>SSL</b> support</td>
-                        <td class="ft_c"><img src="img/navigation_cancel.png" /></td>
-                        <td class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td class="ft_c"><img src="img/navigation_cancel.png" alt="Not included" /></td>
+                        <td class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_line">
                         <td class="ft_b">Graphs <b>grids</b></td>
-                        <td class="ft_c"><img src="img/navigation_cancel.png" /></td>
-                        <td class="ft_c"><img src="img/navigation_accept.png" /></td>
+                        <td class="ft_c"><img src="img/navigation_cancel.png" alt="Not included" /></td>
+                        <td class="ft_c"><img src="img/navigation_accept.png" alt="Included" /></td>
                     </tr>
                     <tr class="ft_foot">
                         <td class="ft_f1">Price</td>
@@ -149,7 +152,7 @@
 
                 <div class="space"></div>
 
-                <img src="img/screenshot2.png" class="aside-img" />
+                <img src="img/screenshot2.png" class="aside-img" alt="Screenshot" />
 
                 <h2>Is my server supported?</h2>
                 <p>Yes it is! Munin for Android is compatible with almost every Munin version and server configuration, even if you use <a href="https://github.com/jonnymccullagh/munstrap#munstrap">Munstrap</a>.
